<resources>
    <string name="join_name">회원가입</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="pwd_confirm">비밀번호 확인</string>
    <string name="email">이메일</string>
    <string name="ok">확인</string>
    <string name="join_done">가입하기</string>
    <string name="done">확인</string>
    <string name="join">회원가입</string>
    <string name="clear">초기화</string>
    <string name="cancel">취소</string>
    <string name="error_join_field_empty">모두 입력해주세요.</string>
    <string name="error_do_not_same_pwd">비밀번호를 확인해주세요.</string>
    <string name="error_discorrent_email">이메일을 확인해주세요.</string>
    <string name="error_fail_login">아이디 혹은 비밀번호를 확인해주세요.</string>
    <string name="login_detail_title">로그인 성공</string>
    <string name="txtInputInfoID">최소 8자 이상</string>
    <string name="txtInputInfoPWD">영문 소문자, 숫자를 포함하여 8자 이상</string>
    <string name="txtInputInfoRePWD">비밀번호가 일치하지 않습니다.</string>
    <string name="txtInputInfoEmail">정확한 이메일이 아닙니다.</string>
    <string name="logout">로그아웃</string>
    <string name="error_do_not_input_id">아이디를 입력해주세요.</string>
    <string name="error_exist_id">중복된 아이디가 있습니다.</string>
    <string name="error_do_not_check_id">아이디 중복 체크 확인해 주세요.</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add">일정 추가</string>
    <string name="title_setting">설정</string>
    <string name="title_alert">공지</string>
    <string name="title_calendar">캘린더</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">MentorMentee</string>
</resources>
