<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/plus"
        android:title="@string/title_add"/>

    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/alert"
        android:title="@string/title_alert" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_setting"
        android:title="@string/title_setting"
        android:icon="@drawable/gear"/>
</menu>
