<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:gravity="center_horizontal"
              android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center_vertical" android:background="@drawable/backcolor">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleBar"
                    android:text="@string/join_name"
                    android:textSize="23dp"
                    android:textColor="#ffffff"
                    android:fontFamily="@font/nanumsquareroundeb" android:gravity="center_vertical"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/editIDLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:hint="@string/id"
                android:id="@+id/editID"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:maxLength="12"
                android:inputType="text"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                android:paddingTop="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btnCheckExistID"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:text="중복체크"
            android:layout_gravity="center_vertical|right"
            android:layout_height="50dp" />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/editPWDLayout"
            android:layout_width="match_parent"
            android:hint="@string/pwd"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/editPWD"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:maxLength="20"
                android:inputType="textPassword"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
        />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
            android:id="@+id/editPWDConfirmLayout"
            android:layout_width="match_parent"
            android:hint="@string/pwd_confirm"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/editPWDConfirm"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:maxLength="20"
                android:inputType="textPassword"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
        />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/editEmailLayout"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:maxLength="20"
                android:inputType="textEmailAddress"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
        />
    </android.support.design.widget.TextInputLayout>


    <Button
            android:id="@+id/btnDone"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/join_done"
            android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
</LinearLayout>